# cert-rnn-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: api.md  lstm_ae_results.md  quickstart.md  red_team_report.md  soundness.md
examples/: demo_lstm_cell.py  verify_my_model.py
examples/lstm_ae_ieee9/: ae_loader.py  reach_set_eps.py  verify_all.py
examples/lstm_ae_ieee9/data/: anchor_M.npy  anchor_S.npy  lstm_ae_ieee9_D.json  lstm_ae_ieee9_D.pt  lstm_ae_ieee9_L.json  lstm_ae_ieee9_L.pt  lstm_ae_ieee9_M.json  lstm_ae_ieee9_M.pt  lstm_ae_ieee9_S.json  lstm_ae_ieee9_S.pt
examples/lstm_ae_ieee9/matlab_results/: certrnn_lstm_ae_D.mat  certrnn_lstm_ae_L.mat  certrnn_lstm_ae_M.mat  certrnn_lstm_ae_S.mat  reach_S_eps0.01.mat
examples/mnist_sequence/: demo_multilayer.py  mnist_loader.py
examples/mnist_sequence/data/: lstm_1_32_mnist.mat  lstm_2_32_mnist.mat  lstm_2_64_mnist.mat  lstm_4_32_mnist.mat  lstm_7_32_mnist.mat
research/: README.md  red_team_lstm_ae.py  red_team_mnist.py
scripts/: probe_D_cert_unsoundness.py  tabulate_lstm_ae.py
src/cert_rnn/: __init__.py  analysis.py  audit.py  cli.py  from_torch.py  lstm.py  models.py  rnn.py  runtime.py  specs.py  transformers.py  verify.py  zono.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_cross_validation.py  test_from_torch.py  test_lstm_ae_parity.py  test_lstm_step.py  test_mnist_parity.py  test_models.py  test_red_team.py  test_specs.py  test_transformers.py  test_verify.py  test_zono.py
tests/matlab/: gen_fixtures.m
tests/matlab/fixtures/: sigid_1d_C1.mat  (+18 more)
(+2 files in other folders)
