[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cert-rnn"
version = "0.0.1"
description = "Zonotope abstract-interpretation transformers for certifying robustness of RNNs and LSTMs (Du et al., CCS 2021)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Anne Tumlin", email = "anne.m.tumlin@vanderbilt.edu" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:TypedStorage is deprecated:UserWarning",
]
